[project]
name = "comfyui-sg-llama-cpp"
description = "llama-cpp-python wrapper, with support for vision models. It allows the user to generate text responses from prompts using llama.cpp."
version = "1.6.0"
license = { file = "LICENSE" }
dependencies = []

[tool.setuptools.dynamic]
dependencies = { file = [ "requirements.txt" ] }

[project.urls]
Repository = "https://github.com/sebagallo/comfyui-sg-llama-cpp"

[tool.comfy]
PublisherId = "sebagallo"
DisplayName = "comfyui-sg-llama-cpp"
Icon = "https://raw.githubusercontent.com/sebagallo/comfyui-sg-llama-cpp/master/assets/icon.png"